--- a/Live demo.ipynb
+++ b/Live demo.ipynb
@@ -22,22 +22,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 2,
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
    "source": [
-    "import os"
+    "# Jupyter crash course"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "# Playing around with Python\n",
+    "def function():\n",
+    "    print(\"Hello Jupyter\")\n",
+    "\n",
+    "function()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -47,26 +63,34 @@
    "outputs": [
     {
      "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAhAAAAFkCAYAAABxWwLDAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAAPYQAAD2EBqD+naQAAGgBJREFUeJzt3X+U5XV93/HnG0piIM2aSpddlYi7RrO2ycqO1uwBowkC\n1ZygLrZmhMZk86O0pOWszTke03g4oceYmAiKCdVoKVBgemizVWzjocEkJvyS4wysoVm0hwUVA7OA\ndjUgUdh3//jeYe4M8+N+Z+Z7v7+ej3PmDPc73+/se+7Z5b7m+3l/3jcyE0mSpDKOqbsASZLUPgYI\nSZJUmgFCkiSVZoCQJEmlGSAkSVJpBghJklSaAUKSJJVmgJAkSaUZICRJUmkGCEmSVFqlASIiXhMR\nN0bE1yLiaEScM8I1r4uI6Yh4MiK+FBHvqLJGSZJUXtV3IE4A7gYuBFZ9042IOAX4n8BngJ3Ah4CP\nR8SZ1ZUoSZLKinG9mVZEHAXenJk3rnDO7wBvyMwfGzo2BWzKzDeOoUxJkjSCpvVA/Dhw86JjNwG7\na6hFkiQt4+/VXcAiW4DZRcdmgR+IiO/NzL9bfEFEPA84G3gAeLLyCiVJ6o7nAKcAN2XmY2UubFqA\nWEoMPi+31nI2cN2YapEkqYvOA64vc0HTAsTDwEmLjm0GvpmZ31nmmgcArr32Wnbs2FFhae2wb98+\nLrvsskr/jL174cCB+cc7d8KVV84/Pucc+NrX5h+/4AVw46LOl1HOWY9xPA9t4PMwz+ei4PMwz+cC\nDh48yPnnnw+D19IymhYgbgfesOjYWYPjy3kSYMeOHezatauqulpj06ZNlT8P3/rWsx8P/5GnnLIw\nHJxyysKvj3LO7Cycey489BBs3Qr798PmzaPXOI7noQ18Hub5XBR8Hub5XCxQugWg6jkQJ0TEzoh4\nxeDQtsHjkwdff19EXD10yUeA7RHxOxHxsoj418BbgUurrFPlbN268uP9++G002DbtuLz/v3P/h6r\nnXPuuXDrrXDoUPF5z56N/RkkSetT9R2IVwJ/RtG/kMAHBsevBvZSNE2ePHdyZj4QET9NERj+LfAg\n8IuZuXhnhmq0f3/xgj58d2DY5s1wyy0rf4/VznnooZUfS5LqVWmAyMzPssJdjsz8hWWumaiyLi1v\nlKWDUQLCem3dWtx9GH4sSWqOpvVAaJ0mJyfXdf3c0gEUL+B79lQfFpay2l2O1az3eegKn4d5PhcF\nn4d5PhfrM7ZJlFWJiF3A9PT0tM0wG2D79oW/+W/bBvfdV189kqTqzMzMMDExATCRmTNlrm3aJErV\nbLUGySaZnYXTTy9Cz+mnw+HDdVckSf3hEoYWWO/SwTg1ZblFkvrIAKEFxtEguVHcqSFJ9XEJQ63V\npuUWSeoaA0TPdKlvYJSBVZKkariE0TNd6hto03KLJHWNdyB6xr4BSdJGMED0jH0DkqSNYIDomT71\nDXSp30OSmsYeiJ7pU99Al/o9JKlpvAOhzrLfQ5KqY4BQZ9nvIUnVcQlDndWmsdyS1DYGiA6ZnS3W\n/YdfMDdvrruq+vSp30OSxs0ljA6Zaxo8dKj4vGdP3RVJkrrKANEhNg1KksbFANEhNg1KksbFHogO\nsWlQkjQuBogOsWmwPBtPJWltXMJQr9l4KklrY4BQr9l4KklrY4BQr9l4KklrYw+Ees3GU0laGwOE\nes3GU0laG5cwWmR2Fk4/HbZvLz4fPlx3RZKkvjJAtIg7BiRJTWGAaBF3DEiSmsIA0SLuGJAkNYVN\nlC3ijgFJUlMYIFrEHQOSpKZwCUOSJJVmgJBW4NZZSVqaAUJagVtnJWlpBghpBW6dlaSlGSCkFbh1\nVpKW5i4MaQVunZWkpRkgpBW4dVaSluYShiRJKs0A0RBuF5QktYkBoiHcLihJahMDREO4XVCS1CYG\niIZwu6AkqU3chdEQbheUJLWJAaIh3C4oSWoTlzAkSVJpBghpndyCK6mPDBDSOrkFV1IfGSCkdXIL\nrqQ+MkBI6+QWXEl95C4MaZ3cgiupjwwQ0jq5BVdSH7mEIUmSSjNASJKk0gwQY+KsAElSlxggxsRZ\nAZKkLjFAjImzAiRJXWKAGBNnBUiSusRtnGPirABJUpcYIMbEWQGSpC5xCUOSJJVmgJAkSaUZIKSK\nOQNEUhcZIKSKOQNEUhcZIKSKOQNEUheNJUBExIURcX9EfDsi7oiIV61w7jsi4mhEPD34fDQinhhH\nnVIVnAEiqYsq38YZEW8DPgD8CnAnsA+4KSJempmPLnPZEeClQAweZ9V1SlVxBoikLhrHHIh9wEcz\n8xqAiLgA+GlgL/D+Za7JzHxkDLVJlXMGiKQuqnQJIyKOAyaAz8wdy8wEbgZ2r3Dp90fEAxHxlYj4\nRES8vMo6JUlSOVX3QJwIHAvMLjo+C2xZ5povUtydOAc4j6LG2yLiBVUVKUmSyqlrF0awTF9DZt6R\nmddm5hcy8y+BPcAjFD0UjeQ+f0lS31TdA/Eo8DRw0qLjm3n2XYklZeZTEXEX8JKVztu3bx+bNm1a\ncGxycpLJycnRq12juX3+UOz137PHNW9JUrNMTU0xNTW14NiRI0fW/P2iaEmoTkTcAXwuMy8aPA7g\nK8Dlmfm7I1x/DHAP8MeZ+WtLfH0XMD09Pc2uXbs2tvgRbd9eBIc527bBfffVUookSSObmZlhYmIC\nYCIzZ8pcO44ljEuBX4mIn4uIHwE+AhwPXAUQEddExG/NnRwR74mIMyPixRFxKnAd8CLg42OodU3c\n5y9J6pvKt3Fm5g0RcSJwCcVSxt3A2UPbNF8IPDV0yQ8Cf0jRZPkNYBrYnZn3Vl3rWrnPX5LUN+OY\nA0FmXgFcsczXfmrR43cC7xxHXRvFff6SpL7xvTAkSVJpBghJklSaAUKSJJVmgJAawGFkktrGACE1\nwNwwskOHis979tRdkSStzAAhNcBDD638WJKaxgAhNYDDyCS1zVjmQEhamcPIJLWNAUJqAIeRSWob\nlzAkSVJpBghJklSaAUKSJJVmgBiBQ34kSVrIADECh/xIkrSQAWIEDvmRJGkhA8QIHPIjSdJCzoEY\ngUN+JElayAAxAof8SJK0kEsYkiSpNAOEJEkqzQAhSZJKM0BILeAwM0lNY4CQWsBhZpKaxgAhtYDD\nzCQ1jQFCagGHmUlqGudASC3gMDNJTWOAkFrAYWaSmsYlDEmSVJoBQpIklWaAkCRJpRkgJElSab0P\nEE74kySpvN4HCCf8SZJUXu8DhBP+JEkqr/cBwgl/kiSV1/tBUk74kySpvN4HCCf8SZJUXu+XMCRJ\nUnkGCEmSVJoBQpIklWaAkCRJpRkgpI5wqqqkcTJASB3hVFVJ42SAkDrCqaqSxskAIXWEU1UljVPv\nB0lJXeFUVUnjZICQOsKpqpLGySUMSZJUmgFCkiSVZoCQJEmlGSAkSVJpnQ8QTueTJGnjdT5AOJ1P\nkqSN1/kA4XQ+SZI2XucDhNP5JEnaeJ0fJOV0PkmSNl7nA4TT+SRJ2nidX8KQJEkbzwAhSZJKM0BI\nkqTSDBBSjzhYTdJGMUBIPeJgNUkbxQAh9YiD1SRtFAOE1CMOVpO0UTo/B0LSPAerSdooBgipRxys\nJmmjuIQhSZJKG0uAiIgLI+L+iPh2RNwREa9a5fx/FhEHB+cfiIg3jKNOSZI0msoDRES8DfgAcDFw\nKnAAuCkiTlzm/N3A9cDHgFcAnwA+EREvr7pWSZI0mnHcgdgHfDQzr8nMe4ELgCeAvcucfxHw6cy8\nNDO/mJkXAzPAr46hVkmSNIJKA0REHAdMAJ+ZO5aZCdwM7F7mst2Drw+7aYXzAdi716l6kiSNS9V3\nIE4EjgVmFx2fBbYsc82WkucDcOCAU/UkSePT99HwdW3jDCA39vx93HXXJs45Z/7I5OQkk5OTayhP\nkqSVzY2Gh2I8/J49zd4mPTU1xdTU1IJjR44cWfP3qzpAPAo8DZy06Phmnn2XYc7DJc8fuIxTT93F\njTeWL1KSpLLaNhp+qV+qZ2ZmmJiYWNP3q3QJIzO/C0wDZ8wdi4gYPL5tmctuHz5/4MzB8WXt3OlU\nPUnS+PR9NPw4ljAuBa6OiGngTopdGccDVwFExDXAg5n564PzPwR8NiLeCfwvYJKiEfOXV/pDrryy\nmLInSdI49H00fOUBIjNvGMx8uIRiaeJu4OzMfGRwyguBp4bOvz0iJoH3Dj7+L/CmzPzrqmuVJGlU\nfR8NP5Ymysy8Arhima/91BLH/gj4o6rrkiRJa+N7YUiSpNIMEJIkqTQDhKRn9H0wjqTRGSAkPWNu\nMM6hQ8Vnp7tKWo4BQtIz2jYYR1J9DBCSntH3wTiSRlfXe2FIaqC+D8aRNDoDhKRn9H0wjqTRuYQh\nSZJKM0BIkqTSDBCSJKk0A4QkSSrNACFJkkozQEiStARHu6/MACFJ0hIc7b4yA4QkSUtwtPvKDBCS\nJC3B0e4rcxKlJElLcLT7ygwQkiQtwdHuK3MJQ5IklWaAkCRJpRkgJElSaQYISaU4XEcSGCAkleRw\nHUlggJBUksN1JIEBQlJJDteRBM6BkFSSw3UkgQFCUkkO15EELmFIkqQ1MEBIkqTSDBCSJKk0A4Qk\nSSrNACFJ6h0nqq6fAUKS1DtOVF0/A4QkqXecqLp+BghJUu84UXX9HCQlSeodJ6qunwFCktQ7TlRd\nP5cwJElSaQYISZJUmgFCkiSVZoCQtKEc0CP1gwFC0oZyQI/UDwYISRvKAT1SPxggJG0oB/RI/eAc\nCEkbygE9Uj8YICRtKAf0SP3gEoYkSSrNACFJkkozQEiSpNIMEJIkqTQDhCSpc5yIWj0DhCSpc5yI\nWj0DhCSpc5yIWj0DhCSpc5yIWj0HSUmSOseJqNUzQEiSOseJqNVzCUOSJJVmgJAkSaUZICSNnXv0\npfYzQEgaO/foS+1ngJA0du7Rl9rPACFp7NyjL7Wf2zgljZ179KX2M0BIGjv36Evt5xKGJEkqzQAh\nSZJKqzRARMQPRsR1EXEkIr4RER+PiBNWuebPI+Lo0MfTEXFFlXVKkqRyqu6BuB44CTgD+B7gKuCj\nwPkrXJPAHwLvAWJw7InqSpQkSWVVdgciIn4EOBv4xcz8fGbeBvwb4GcjYssqlz+RmY9k5uHBx99W\nVackqV2cZNoMVS5h7Aa+kZl3DR27meIOw6tXufa8iHgkIv4qIn4rIr6vsiolSa3iJNNmqHIJYwuw\nIBdm5tMR8fXB15ZzHfBl4G+AHwPeD7wUeGtFdUqSWsRJps1QOkBExPuAd61wSgI7VvoWg3OWvjjz\n40MP/09EPAzcHBEvzsz7l7tu3759bNq0acGxyclJJicnVyhFktQ2W7cWdx+GH2t1U1NTTE1NLTh2\n5MiRNX+/yFz2tXzpCyKeBzxvldMOAf8C+L3MfObciDgWeBJ4a2Z+csQ/73jgb4GzM/NPlvj6LmB6\nenqaXbt2jfhTSJLa6vDhZ08y3by57qraaWZmhomJCYCJzJwpc23pOxCZ+Rjw2GrnRcTtwHMj4tSh\nPogzKO5AfK7EH3kqxR0Lb1JJkpxk2hCVNVFm5r3ATcDHIuJVEXEa8GFgKjMfBoiI50fEwYh45eDx\ntoj4jYjYFREviohzgKuBz2bmPVXVKkmSyql6DsTbgd+n2H1xFPjvwEVDXz+OokHy+MHj7wCvH5xz\nAvBV4L8B7624TkmSVEKlASIz/x8rDI3KzC8Dxw49fhB4XZU1SWq+2dliq55r3FJz+V4YkhrHff5S\n8xkgJDWO+/yl5jNASGqcxfv63ecvNU/VTZSSVNr+/c/e5y+pWQwQkhrHff5S87mEIUmSSjNASJKk\n0gwQkiSpNAOEJKlRZmfh9NNh+/bi8+HDdVekpRggJEmN4iCxdjBASJIaxUFi7WCAkCQ1ioPE2sE5\nEJKkRnGQWDsYICRJjeIgsXZwCUOSJJVmgJDUSm71k+plgJDUSm71k+plgJDUSm71k+plgJDUSm71\nk+rlLgxJreRWP6leBghJreRWP6leLmFIkqTSDBCSJKk0A4QkaWyc39EdBghJ0tg4v6M7DBCSpLFx\nfkd3GCAkSWPj/I7ucBunJGlsnN/RHQYISdLYOL+jO1zCkNRJdvtL1TJASOoku/2lahkgJHWS3f5S\ntQwQkjrJbn+pWjZRSuoku/2lahkgJHWS3f5StVzCkCRJpRkgJEkbxu2z/WGAkCRtGLfP9ocBQpK0\nYdw+2x8GCEnShnH7bH+4C0OStGHcPtsfBghJvTU7W6zZD7/Ybd5cd1Xt5vbZ/nAJQ1Jv2fAnrZ0B\nQlJv2fAnrZ0BQlJv2fAnrZ09EJJ6y4Y/ae0MEJJ6y4Y/ae1cwpAkjcQx1RpmgJAkjcRdKxpmgJAk\njcRdKxpmgJAkjcRdKxpmE6UkaSTuWtEwA4QkLcNR1wu5a0XDXMKQpGXYNCgtzwAhScuwaVBangFC\nkpZh06C0PAOEJC1j/3447TTYtq343PWmQQdFqQybKCVpGX1rGpzr+YCi72PPnn79/CrHOxCSJMCe\nD5VjgJAkAfZ8qBwDhCStQ5f6BvrW86H1sQdCktahS30Dfev50Pp4B0KS1sG+AfWVAUKS1qEtfQNd\nWmpRM7iEIUnr0JY3mOrSUouawTsQHTM1NVV3CY3g81DweZhX1XMx1zdw333F58VvttWU3/znl1am\nFj3uL/99rE9lASIifj0ibo2IxyPi6yWuuyQi/iYinoiIP4mIl1RVYxf5D6Lg81DweZhX13PRlDfk\nml9amVr0uL/897E+Vd6BOA64AfiPo14QEe8CfhX4l8A/AR4HboqI76mkQkmqWFOaLOe2aB5/vFs0\ntTEqCxCZ+ZuZ+SHgr0pcdhHwHzLzU5l5D/BzwPOBN1dRoyRVbVxNlqstlcwttZxxxtJLLVJZjemB\niIgXA1uAz8wdy8xvAp8DdtdVlyStxyjDmVZ78R+lj6IpSyXqjybtwtgCJDC76Pjs4GvLeQ7AwYMH\nKyqrXY4cOcLMzEzdZdTO56Hg8zCvzufi8svn//vBB4uPYXv3woEDxX8fOgRnnQVXXjn61wEeeODZ\nj5f6cf07Mc/nYsFr53PKXhuZOfrJEe8D3rXCKQnsyMwvDV3zDuCyzPwHq3zv3cAtwPMzc3bo+A3A\nU5n59mWueztw3cg/hCRJWuy8zLy+zAVl70D8HvCfVznnUMnvOedhIICTWHgXYjNw1wrX3QScBzwA\nPLnGP1uSpD56DnAKxWtpKaUCRGY+BjxW9g8Z8XvfHxEPA2cAXwCIiB8AXg38wSo1lUpNkiTpGbet\n5aIq50CcHBE7gRcBx0bEzsHHCUPn3BsRbxq67IPAb0TEz0TEjwLXAA8Cn6yqTkmSVF6VTZSXUGzD\nnDPXqfKTwF8M/vuHgU1zJ2Tm+yPieOCjwHOBvwTekJnfqbBOSZJUUqkmSkmSJGjQHAhJktQeBghJ\nklRa6wNERFwYEfdHxLcj4o6IeFXdNY1bRLwmIm6MiK9FxNGIOKfumuoQEe+OiDsj4psRMRsR/yMi\nXlp3XeMWERdExIGIODL4uC0i/mndddVt8PfjaERcWnct4xYRFw9+9uGPv667rjpExPMj4r9ExKOD\nN208EBG76q5r3Aavm4v/ThyNiA+P+j1aHSAi4m3AB4CLgVOBAxRvvnVirYWN3wnA3cCFFMO8+uo1\nwIcptv6+nuIN3f53RHxfrVWN31cpBr5NDD7+FPhkROyotaoaDX6x+GWK/0f01T0Uc3a2DD5Or7ec\n8YuI5wK3An8HnA3sAP4d8I0666rJK5n/u7AFOJPi9eOGUb9Bq5soI+IO4HOZedHgcVD8z/PyzHx/\nrcXVJCKOAm/OzBvrrqVugyB5GPiJzLyl7nrqFBGPAb+WmasNguuciPh+YBr4V8B7gLsy8531VjVe\nEXEx8KbM7N1v2sMi4reB3Zn52rpraZqI+CDwxswc+a5ta+9ARMRxFL9dDb/5VgI345tvqfBcikT9\n9boLqUtEHBMRPwscD9xedz01+QPgU5n5p3UXUrMfHixz3hcR10bEyXUXVIOfAT4fETcMljlnIuKX\n6i6qboPX0/OA/1TmutYGCOBE4FjKv/mWemBwN+qDwC2Z2bu13oj4xxHxLYpbtVcAb8nMe2sua+wG\n4ekVwLvrrqVmdwA/T3Hb/gLgxcBfDA/264ltFHeivgicBXwEuDwizq+1qvq9hWIm09VlLmrSu3Fu\nlKDffQAqXAG8HDit7kJqci+wk+IuzLnANRHxE30KERHxQooQeWZmfrfueuqUmcPvc3BPRNwJfBn4\n56z+/kZdcgxwZ2a+Z/D4QET8I4pQcW19ZdVuL/DpzHy4zEVtvgPxKPA0RVPQsM08+66EeiQifh94\nI/C6zHyo7nrqkJlPZeahzJzJzH9P0Tx4Ud11jdkE8A+B6Yj4bkR8F3gtcFFEfGdwl6qXMvMI8CXg\nJXXXMmYPAQcXHTsI/FANtTRCRPwQRdP5x8pe29oAMfiNYprizbeAZ25bn8Ea3xhE7TcID28CfjIz\nv1J3PQ1yDPC9dRcxZjcDP0qxhLFz8PF5it80d2abO8jXadBYup3iBbVPbgVetujYyyjuxvTVXopf\nuv+47IVtX8K4FLg6IqaBO4F9FM1iV9VZ1LgN1jFfQrF8A7Bt8EZmX8/Mr9ZX2XhFxBXAJHAO8HhE\nzN2dOpKZvXmr94h4L/Bpih1Jf5+iOeq1FGu+vZGZjwML+l8i4nHgscxc/Ftop0XE7wKfonihfAHw\nm8BTwFSdddXgMuDWiHg3xXbFVwO/RLHFt3cGv3T/PHBVZh4te32rA0Rm3jDYqncJxVLG3cDZmflI\nvZWN3SuBP6Po/UiK2RhQNMTsrauoGlxA8fP/+aLjv0Dxzq59cRLFz7sVOAJ8ATjLXQhAf/ujXghc\nDzwPeAS4BfjxzHys1qrGLDM/HxFvAX6bYkvv/cBFmflf662sNq8HTmaNfTCtngMhSZLq0doeCEmS\nVB8DhCRJKs0AIUmSSjNASJKk0gwQkiSpNAOEJEkqzQAhSZJKM0BIkqTSDBCSJKk0A4QkSSrNACFJ\nkkr7//FPQRbwY5hLAAAAAElFTkSuQmCC\n",
       "text/plain": [
-       "['.env',\n",
-       " '.ipynb_checkpoints',\n",
-       " 'requirements.txt',\n",
-       " 'Database access.ipynb',\n",
-       " 'README.org',\n",
-       " 'Fancy graphs.ipynb',\n",
-       " '.git',\n",
-       " 'iPython intro.ipynb',\n",
-       " 'Introduction to Pandas.ipynb',\n",
-       " 'Live demo.ipynb']"
+       "<matplotlib.figure.Figure at 0x7f9572a07080>"
       ]
      },
-     "execution_count": 3,
      "metadata": {},
-     "output_type": "execute_result"
+     "output_type": "display_data"
     }
    ],
    "source": [
-    "os.listdir('.')"
+    "# Simple plots\n",
+    "%matplotlib inline\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "x = np.linspace(0, 2 * 3.14)\n",
+    "sin_plot = plt.plot(x, np.sin(x), '.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "resp = requests.get"
    ]
   },
   {
