--- a/Crime.ipynb
+++ b/Crime.ipynb
@@ -1201,7 +1201,7 @@
     }
    ],
    "source": [
-    "# add an extra column\n",
+    "# add an extra column!\n",
     "extract_category = lambda x: x if x is None else x['category']\n",
     "df['outcome_simplified'] = df['outcome_status'].apply(extract_category)\n",
     "\n",
