--- a/expenses.ipynb
+++ b/expenses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {
     "collapsed": true
    },
@@ -18,13 +18,91 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>what</th>\n",
+       "      <th>price</th>\n",
+       "      <th>category</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2017/01/01</td>\n",
+       "      <td>coffee</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>food</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2017/01/02</td>\n",
+       "      <td>cinema</td>\n",
+       "      <td>12.0</td>\n",
+       "      <td>entertainment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2017/01/02</td>\n",
+       "      <td>tube</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>transport</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2017/01/02</td>\n",
+       "      <td>tube</td>\n",
+       "      <td>3.5</td>\n",
+       "      <td>transport</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2017/01/04</td>\n",
+       "      <td>book</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>entertainment</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>2017/01/05</td>\n",
+       "      <td>bus</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>transport</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         date    what  price       category\n",
+       "0  2017/01/01  coffee    2.5           food\n",
+       "1  2017/01/02  cinema   12.0  entertainment\n",
+       "2  2017/01/02    tube    4.0      transport\n",
+       "3  2017/01/02    tube    3.5      transport\n",
+       "4  2017/01/04    book   10.0  entertainment\n",
+       "5  2017/01/05     bus    2.0      transport"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df = pd.read_csv(url)\n"
+    "df = pd.read_csv(url)\n",
+    "df"
    ]
   },
   {
@@ -170,15 +248,6 @@
     "df = pd.read_sql('select * from expenses', engine)\n",
     "df[df.category == 'transport']"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
