--- a/Live demo.ipynb
+++ b/Live demo.ipynb
@@ -98,22 +98,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.square>"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# interaction\n",
     "\n",
     "from ipywidgets import interact, interactive, fixed\n",
     "import ipywidgets as widgets\n",
     "\n",
-    "def f(x):\n",
-    "    return x\n"
+    "def square(x):\n",
+    "    return x * x\n",
+    "\n",
+    "interact(square, x=10)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "20"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<function __main__.summer>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def summer(a, b):\n",
+    "    return a + b\n",
+    "\n",
+    "interact(summer, a=10, b=10)"
    ]
   },
   {
@@ -243,10 +303,38 @@
   },
   "widgets": {
    "state": {
+    "3da18e79c0414092b6be472cd9129d4f": {
+     "views": [
+      {
+       "cell_index": 6
+      }
+     ]
+    },
     "4e442bb837384079a134a1c2163216c9": {
      "views": [
       {
        "cell_index": 7
+      }
+     ]
+    },
+    "c5a59199e2dd4ef2b96706584f08dc95": {
+     "views": [
+      {
+       "cell_index": 5
+      }
+     ]
+    },
+    "ce211d4c283e431980d1be6538471db1": {
+     "views": [
+      {
+       "cell_index": 5
+      }
+     ]
+    },
+    "da7fccb4c3b744aa924bb2a1ff9f58ce": {
+     "views": [
+      {
+       "cell_index": 5
       }
      ]
     }
