--- a/README.org
+++ b/README.org
@@ -7,6 +7,7 @@ notebook extension that can be enabled by doing
   jupyter-nbextension install rise --py --sys-prefix
   jupyter-nbextension enable rise --py --sys-prefix
   jupyter nbextension enable --py --sys-prefix widgetsnbextension
+  jupyter nbextension enable --py --sys-prefix ipyleaflet
 #+END_SRC
 
 After all the requirements are installed correctly.
