remove db file and use the new url from the form

--- a/expenses.ipynb
+++ b/expenses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -16,12 +16,12 @@
     "import numpy as np\n",
     "import sqlalchemy\n",
     "\n",
-    "url = \"https://docs.google.com/spreadsheets/d/1AWW7q63um7WbwgdcyDQs2u9Gpyh72-SCtJ7LJus_FOU/pub?gid=0&single=true&output=csv\""
+    "url = \"https://docs.google.com/spreadsheets/d/1AWW7q63um7WbwgdcyDQs2u9Gpyh72-SCtJ7LJus_FOU/pub?gid=332175203&single=true&output=csv\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -38,6 +38,7 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
+       "      <th>Timestamp</th>\n",
        "      <th>date</th>\n",
        "      <th>what</th>\n",
        "      <th>price</th>\n",
@@ -47,61 +48,40 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2017/01/01</td>\n",
-       "      <td>coffee</td>\n",
-       "      <td>2.5</td>\n",
+       "      <td>1/11/2017 10:25:19</td>\n",
+       "      <td>1/12/2017</td>\n",
+       "      <td>food</td>\n",
+       "      <td>23.0</td>\n",
        "      <td>food</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>2017/01/02</td>\n",
-       "      <td>cinema</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>entertainment</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2017/01/02</td>\n",
-       "      <td>tube</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>transport</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2017/01/02</td>\n",
-       "      <td>tube</td>\n",
-       "      <td>3.5</td>\n",
-       "      <td>transport</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2017/01/04</td>\n",
-       "      <td>book</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>entertainment</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>2017/01/05</td>\n",
+       "      <td>1/11/2017 10:27:52</td>\n",
+       "      <td>1/10/2017</td>\n",
        "      <td>bus</td>\n",
        "      <td>2.0</td>\n",
        "      <td>transport</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1/11/2017 10:29:25</td>\n",
+       "      <td>1/11/2017</td>\n",
+       "      <td>coffee</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>food</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "         date    what  price       category\n",
-       "0  2017/01/01  coffee    2.5           food\n",
-       "1  2017/01/02  cinema   12.0  entertainment\n",
-       "2  2017/01/02    tube    4.0      transport\n",
-       "3  2017/01/02    tube    3.5      transport\n",
-       "4  2017/01/04    book   10.0  entertainment\n",
-       "5  2017/01/05     bus    2.0      transport"
+       "            Timestamp       date    what  price   category\n",
+       "0  1/11/2017 10:25:19  1/12/2017    food   23.0       food\n",
+       "1  1/11/2017 10:27:52  1/10/2017     bus    2.0  transport\n",
+       "2  1/11/2017 10:29:25  1/11/2017  coffee    2.5       food"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -122,30 +102,20 @@
    },
    "outputs": [],
    "source": [
+    "!rm -f expenses.db\n",
     "engine = sqlalchemy.create_engine('sqlite:///expenses.db')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false,
     "slideshow": {
      "slide_type": "notes"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<sqlalchemy.engine.result.ResultProxy at 0x7f1182948860>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "CREATE_TABLE = \"\"\"\n",
     "CREATE TABLE expenses(\n",
@@ -156,12 +126,12 @@
     "    category CHAR(20)\n",
     ")\n",
     "\"\"\"\n",
-    "engine.execute(CREATE_TABLE)"
+    "# engine.execute(CREATE_TABLE)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -176,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -187,14 +157,12 @@
     {
      "data": {
       "text/plain": [
-       "[(0, '2017/01/01', 'coffee', 2.5, 'food'),\n",
-       " (1, '2017/01/02', 'cinema', 12.0, 'entertainment'),\n",
-       " (2, '2017/01/02', 'tube', 4.0, 'transport'),\n",
-       " (3, '2017/01/02', 'tube', 3.5, 'transport'),\n",
-       " (4, '2017/01/04', 'book', 10.0, 'entertainment')]"
+       "[(0, '1/11/2017 10:25:19', '1/12/2017', 'food', 23.0, 'food'),\n",
+       " (1, '1/11/2017 10:27:52', '1/10/2017', 'bus', 2.0, 'transport'),\n",
+       " (2, '1/11/2017 10:29:25', '1/11/2017', 'coffee', 2.5, 'food')]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -205,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -222,7 +190,8 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>index</th>\n",
-       "      <th>when</th>\n",
+       "      <th>Timestamp</th>\n",
+       "      <th>date</th>\n",
        "      <th>what</th>\n",
        "      <th>price</th>\n",
        "      <th>category</th>\n",
@@ -230,19 +199,12 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>2017/01/02</td>\n",
-       "      <td>tube</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>transport</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>2017/01/02</td>\n",
-       "      <td>tube</td>\n",
-       "      <td>3.5</td>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1/11/2017 10:27:52</td>\n",
+       "      <td>1/10/2017</td>\n",
+       "      <td>bus</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>transport</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -250,12 +212,11 @@
        "</div>"
       ],
       "text/plain": [
-       "   index        when  what  price   category\n",
-       "2      2  2017/01/02  tube    4.0  transport\n",
-       "3      3  2017/01/02  tube    3.5  transport"
+       "   index           Timestamp       date what  price   category\n",
+       "1      1  1/11/2017 10:27:52  1/10/2017  bus    2.0  transport"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -266,6 +227,15 @@
     "df = pd.read_sql('select * from expenses', engine)\n",
     "df[df.category == 'transport']"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
