--- a/expenses.ipynb
+++ b/expenses.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "slideshow": {
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "scrolled": true,
@@ -70,18 +70,27 @@
        "      <td>2.5</td>\n",
        "      <td>food</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1/11/2017 10:32:16</td>\n",
+       "      <td>1/11/2017</td>\n",
+       "      <td>ice cream</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>food</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "            Timestamp       date    what  price   category\n",
-       "0  1/11/2017 10:25:19  1/12/2017    food   23.0       food\n",
-       "1  1/11/2017 10:27:52  1/10/2017     bus    2.0  transport\n",
-       "2  1/11/2017 10:29:25  1/11/2017  coffee    2.5       food"
+       "            Timestamp       date       what  price   category\n",
+       "0  1/11/2017 10:25:19  1/12/2017       food   23.0       food\n",
+       "1  1/11/2017 10:27:52  1/10/2017        bus    2.0  transport\n",
+       "2  1/11/2017 10:29:25  1/11/2017     coffee    2.5       food\n",
+       "3  1/11/2017 10:32:16  1/11/2017  ice cream    3.0       food"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
